top players add

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-     <link rel="stylesheet" href="Styles/style.css">
-</head>
-<body>
-     
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="Styles/style.css" />
+  </head>
+  <body>
+    <!-- Header start -->
+    <header></header>
+    <!-- Header end -->
+    <main>
+      <!-- top players and top blogs -->
+      <section class="container">
+        <div class="top-players">
+          <h2 class="player-title">Top Players</h2>
+          <div class="players">
+            <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Players-$} -->
+            <div class="player">
+              <img src="images/players/player-1.png" alt="" />
+              <h3 class="Player-name">John Smith</h3>
+            </div>
+            <div class="player">
+              <img src="images/players/player-2.png" alt="" />
+              <h3 class="Player-name">Pro Rasel</h3>
+            </div>
+            <div class="player">
+              <img src="images/players/player-3.png" alt="" />
+              <h3 class="Player-name">Abu Sufian</h3>
+            </div>
+            <div class="player">
+              <img src="images/players/player-4.png" alt="" />
+              <h3 class="Player-name">Shajedul Karim</h3>
+            </div>
+            <div class="player">
+              <img src="images/players/player-5.png" alt="" />
+              <h3 class="Player-name">Maruf Ahmed</h3>
+            </div>
+            <div class="player">
+              <img src="images/players/player-6.png" alt="" />
+              <h3 class="Player-name">Mujahid</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
