--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Styles/style.css" />
+    <!-- Font style -->
+    <script
+      src="https://kit.fontawesome.com/e52eb25679.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Header start -->
     <header></header>
     <!-- Header end -->
     <main>
-      <!-- top players and top blogs -->
+      <!----------top players------->
       <section class="container">
         <div class="top-players">
-          <h2 class="player-title">Top Players</h2>
+          <h2 class="section-title">Top Players</h2>
           <div class="players">
             <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Players-$} -->
             <div class="player">
@@ -41,6 +46,129 @@
             <div class="player">
               <img src="images/players/player-6.png" alt="" />
               <h3 class="Player-name">Mujahid</h3>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <!---------blog part--------->
+        <div class="top-blogs">
+          <h2 class="section-title">Top Blogs</h2>
+          <div class="blogs">
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-1.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-2.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">UI cheat sheet:list vs grids</h3>
+                <p class="blog-author">By <a href="">Tess Gadd</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-3.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">
+                  7 typography tips for interface design
+                </h3>
+                <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-4.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">Your logo is copied</h3>
+                <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <h2 class="section-title">Latest Courses</h2>
+        <div class="courses">
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-1.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">React-The Complete Guide 2020</h3>
+              <p class="course-author"><a href="">Reed Krakoff.</a></p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                </div>
+                <span>4.5</span>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-2.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">
+                Powerpoint 2020 Master Powerpoint Course
+              </h3>
+              <p class="course-author"><a href="">Walter Scott</a></p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                </div>
+                <span>4.5</span>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-3.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+              <p class="course-author"><a href="">Reed Krakoff.</a></p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                </div>
+                <span>4.5</span>
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  1:30hr
+                </div>
+              </div>
             </div>
           </div>
         </div>
