--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header end -->
     <main>
       <!----------top players------->
-      <section class="container">
+      <section class="container-1">
         <div class="top-players">
           <h2 class="section-title">Top Players</h2>
           <div class="players">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </section>
-      <section class="container">
+      <section class="container-2">
         <h2 class="section-title">Latest Courses</h2>
         <div class="courses">
           <div class="course">
@@ -139,10 +139,10 @@
                   <i class="fa-solid fa-star filled"></i>
                   <i class="fa-solid fa-star empty"></i>
                 </div>
-                <span>4.5</span>
+                <span>4.3</span>
                 <div class="course-duration">
                   <i class="fa-regular fa-clock"></i>
-                  1:30hr
+                  1:40hr
                 </div>
               </div>
             </div>
@@ -163,10 +163,10 @@
                   <i class="fa-solid fa-star filled"></i>
                   <i class="fa-solid fa-star empty"></i>
                 </div>
-                <span>4.5</span>
+                <span>4.4</span>
                 <div class="course-duration">
                   <i class="fa-regular fa-clock"></i>
-                  1:30hr
+                  1:45hr
                 </div>
               </div>
             </div>
